--- a/src/Style/index.css
+++ b/src/Style/index.css
@@ -49,7 +49,9 @@ a {
 .circle {
   border-radius: 50%;
 }
-
+.align-center {
+  align-items: center;
+}
 .center {
   justify-content: center;
   align-items: center;
@@ -144,7 +146,7 @@ a {
   border: 1px solid transparent;
   border-radius: var(--app-border-rad);
   box-shadow: var(--app-box-shadow);
-  padding: 10px;
+  padding: 0 10px;
   color: var(--clr-light);
   font-size: var(--font-size-reg);
   font-weight: 600;
@@ -159,6 +161,11 @@ a {
   background-color: var(--clr-light);
   color: var(--clr-drk);
   border: solid 2px var(--clr-drk);
+}
+.btn.small {
+  height: 20px;
+  line-height: 20px;
+  font-size: var(--font-size-small);
 }
 
 .btn:hover {
@@ -207,11 +214,15 @@ a {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  transition: 0.3s ease;
+  position: relative;
+  transition: var(--app-transition);
   background-color: var(--clr-light);
+  box-shadow: 1px 1px 7px rgba(0,0,0,0.15);
+
 }
 .product-card:hover {
-  box-shadow: 0 0 10px rgba(0,0,0,0.15);
+  transform: translateY(-4px);
+  box-shadow: 2px 2px 10px rgba(0,0,0,0.25);
 }
 .product-card img {
   width: 100%;
@@ -231,7 +242,12 @@ a {
 }
 .product-display h2 {
   font-size: var(--font-size-subtitle);
-  color: var(--clr-drk);
+  color: var(--clr-light);
+    text-shadow:
+    -1px -1px 0 var(--clr-drk),
+    1px -1px 0 var(--clr-drk),
+    -1px  1px 0 var(--clr-drk),
+    1px  1px 0 var(--clr-drk);
 }
 .product-grid {
   width: 100%;
@@ -312,8 +328,30 @@ a {
   text-transform: uppercase;
 }
 
+.favorite-btn {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  border: none;
+  background-color: var(--clr-light);
+  font-size: var(--font-size-reg);
+  transition: var(--app-transition);
+  cursor: pointer;
+}
+.favorite-btn:hover {
+  transform: scale(1.1);
+  backdrop-filter: brightness(0.8);
+}
+
+.quantity-adjuster span {
+  font-size: var(--font-size-reg);
+  color: var(--clr-drk);
+}
 
 .banner-section {
   margin: var(--app-spacing) 0;
   background-color: var(--clr-bg);;
+}
+.banner-section img {
+  cursor: pointer;
 }
