--- a/src/Style/partial-pages.css
+++ b/src/Style/partial-pages.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-.profile, .sign-in-page, .not-found, .shopping-cart {
+.profile, .sign-in-page, .not-found, .shopping-cart, .sign-up-page, .edit-profile-page {
   height: 100svh;
   width: 100svw;
   display: flex;
@@ -8,7 +8,8 @@
   justify-content: center;
   align-items: center;
 }
-.not-found-card, .profile-card, .cart-card {
+.not-found-card, .profile-card, .cart-card, .sign-up-card, .edit-profile-card {
+  min-width: 500px;
   background-color: var(--clr-light);
   border-radius: var(--app-border-rad);
   display: flex;
@@ -25,8 +26,26 @@
   font-size: var(--font-size-subtitle);
   color: var(--clr-drk);
 }
-.not-found-card p, .not-found-card a, .profile-card p, .profile-card a {
+.not-found-card p, .not-found-card a, .profile-card p, .profile-card a, .sign-up-card input, .edit-profile-card input {
   font-size: var(--font-size-reg);
   color: var(--clr-drk);
   margin: 10px 0;
+}
+.sign-up-card form, .edit-profile-card form {
+  width: 100%;
+}
+.edit-profile-card form, .sign-up-card form {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.sign-up-card textarea, .edit-profile-card textarea {
+  background-color: var(--clr-bg);
+  border-radius: var(--app-border-rad);
+  resize: vertical;
+}
+.favorites-list {
+  overflow: scroll;
+  height: 400px;
 }
